bin/tests/errors/sema/sema_err_array_dim_not_int.swg
#global fileprivate

var G: [2.0] s32    // swc-expected-error {{sema_err_array_dim_not_int}}
